Fix element alignment on the docs homepage.

--- a/_src/docs.css
+++ b/_src/docs.css
@@ -479,7 +479,7 @@ hr {
   display: flex;
   justify-content: space-between;
   width: 100%;
-  margin: 0px -8px;
+  margin: 0px 0px;
 }
 .cl-featuredcard > div {
   padding: 24px;
